# hathor

./: .dockerignore  .gitattributes  .gitignore  .gitlab-ci.yml  .pylintrc  .pylintrc.test  AGENTS.md  CHANGELOG.md  CONTRIBUTING.md  DEVELOPMENT.md  DOCKER.md  Dockerfile  README.md  README.rst  docker-compose.override.yml.example  docker-compose.yml  pyproject.toml  renovate.json  requirements.txt  setup.py  tox.ini
.github/: CODEOWNERS  dependabot.yml
.github/workflows/: build_check.yml  cd.yml  ci.yml  coverage-upload.yml  dependabot.yml  tag_build.yml
hathor/: __init__.py  cli.py  client.py  exc.py  settings.py  utils.py
hathor/audio/: cli.py  editor.py  metadata.py
hathor/cli/: audio.py  client.py  common.py
hathor/database/: tables.py
hathor/podcast/: archive.py  urls.py
scripts/: audio_cli.py  hathor_cli.py  utils.py
tests/: requirements.txt  test_cli.py  test_client.py  test_utils.py  utils.py
tests/audio/: test_audio.py  test_cli.py
tests/audio/data/: audio_volume_data.py  audio_volume_data_no_commercial.py
tests/cli/: test_args.py  test_cli.py  test_table.py
tests/cli/audio/: test_args.py  test_audio.py
tests/cli/client/: test_args.py  test_client.py
tests/data/: rss_feed.py
tests/podcasts/: test_archive.py  test_episodes.py  test_filters.py  test_podcast.py
tests/podcasts/data/: history_on_fire.py  rss_feed.py  soundcloud_account.py  soundcloud_archive_page1.py  soundcloud_archive_page2.py  soundcloud_one_track_cant_download.py  soundcloud_one_track_only_page.py  soundcloud_three_tracks.py  soundcloud_two_tracks.py  youtube_archive1_new_item.py  youtube_archive2.py  youtube_one_item_not_video.py
