[build-system]
requires = ["setuptools>=82.0.1"]
build-backend = "setuptools.build_meta"

[project]
name = "hathor"
dynamic = ["version"]
description = "Hathor Audio File Manager"
authors = [
    {name = "Tyler D. North", email = "me@tyler-north.com"}
]
requires-python = ">=3.10"
dependencies = [
    "click==8.4.1",
    "feedparser==6.0.12",
    "google-api-python-client==2.196.0",
    "mutagen==1.47.0",
    "pyaml-env==1.2.2",
    "requests==2.34.2",
    "SQLAlchemy==2.0.49",
    "validators==0.35.0",
    "yt-dlp==2026.3.17",
]

[project.optional-dependencies]
test = [
    "pytest==9.0.3",
    "pytest-mock==3.15.1",
    "pytest-cov==7.1.0",
    "tox==4.54.0",
    "pylint==4.0.5",
    "requests-mock==1.12.1",
    "bandit==1.9.4",
]

[project.scripts]
hathor = "hathor.cli:main"
audio-tool = "hathor.audio.cli:main"

[tool.setuptools.dynamic]
version = {file = "VERSION"}

[tool.setuptools.packages.find]
exclude = ["tests*"]
